--- a/app/WindowsFormsApp1/App.config
+++ b/app/WindowsFormsApp1/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="base" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Я\Desktop\Тосенко(Совместно)\ex31_1-master\data\app\WindowsFormsApp1\Лопушок.mdf;Integrated Security=True"/>
+	</connectionStrings>
 </configuration>
