--- a/app/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/app/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D444C1BF-B094-45E7-9D3C-B0EEF1F744FF}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>WindowsFormsApp1</RootNamespace>
     <AssemblyName>WindowsFormsApp1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -72,6 +72,12 @@
       <DependentUpon>add_product.cs</DependentUpon>
     </Compile>
     <Compile Include="Database.cs" />
+    <Compile Include="edit_product.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="edit_product.Designer.cs">
+      <DependentUpon>edit_product.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,8 +99,17 @@
     <Compile Include="select_mode.Designer.cs">
       <DependentUpon>select_mode.cs</DependentUpon>
     </Compile>
+    <Compile Include="select_product.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="select_product.Designer.cs">
+      <DependentUpon>select_product.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="add_product.resx">
       <DependentUpon>add_product.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="edit_product.resx">
+      <DependentUpon>edit_product.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -113,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="select_mode.resx">
       <DependentUpon>select_mode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="select_product.resx">
+      <DependentUpon>select_product.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
