--- a/app/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/app/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D444C1BF-B094-45E7-9D3C-B0EEF1F744FF}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>WindowsFormsApp1</RootNamespace>
     <AssemblyName>WindowsFormsApp1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -72,6 +72,12 @@
       <DependentUpon>add_product.cs</DependentUpon>
     </Compile>
     <Compile Include="Database.cs" />
+    <Compile Include="edit_material.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="edit_material.Designer.cs">
+      <DependentUpon>edit_material.cs</DependentUpon>
+    </Compile>
     <Compile Include="edit_material_product.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,9 @@
     </Compile>
     <EmbeddedResource Include="add_product.resx">
       <DependentUpon>add_product.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="edit_material.resx">
+      <DependentUpon>edit_material.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="edit_material_product.resx">
       <DependentUpon>edit_material_product.cs</DependentUpon>
