--- a/app/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/app/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D444C1BF-B094-45E7-9D3C-B0EEF1F744FF}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>WindowsFormsApp1</RootNamespace>
     <AssemblyName>WindowsFormsApp1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -97,6 +97,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Product.cs" />
+    <Compile Include="Product\select_product.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Product\select_product.Designer.cs">
+      <DependentUpon>select_product.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="remove_product.cs">
@@ -110,12 +116,6 @@
     </Compile>
     <Compile Include="select_mode.Designer.cs">
       <DependentUpon>select_mode.cs</DependentUpon>
-    </Compile>
-    <Compile Include="select_product.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="select_product.Designer.cs">
-      <DependentUpon>select_product.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="add_product.resx">
       <DependentUpon>add_product.cs</DependentUpon>
@@ -132,6 +132,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Product\select_product.resx">
+      <DependentUpon>select_product.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -146,9 +149,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="select_mode.resx">
       <DependentUpon>select_mode.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="select_product.resx">
-      <DependentUpon>select_product.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
