--- a/app/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/app/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -65,36 +65,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="add_product.cs">
+    <Compile Include="Product\add_product.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="add_product.Designer.cs">
+    <Compile Include="Product\add_product.Designer.cs">
       <DependentUpon>add_product.cs</DependentUpon>
     </Compile>
     <Compile Include="Database.cs" />
-    <Compile Include="edit_material.cs">
+    <Compile Include="Product\edit_material.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="edit_material.Designer.cs">
+    <Compile Include="Product\edit_material.Designer.cs">
       <DependentUpon>edit_material.cs</DependentUpon>
     </Compile>
-    <Compile Include="edit_material_product.cs">
+    <Compile Include="Product\edit_product.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="edit_material_product.Designer.cs">
-      <DependentUpon>edit_material_product.cs</DependentUpon>
-    </Compile>
-    <Compile Include="edit_product.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="edit_product.Designer.cs">
+    <Compile Include="Product\edit_product.Designer.cs">
       <DependentUpon>edit_product.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Product.cs" />
     <Compile Include="Product\select_product.cs">
@@ -105,26 +93,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="select_mode.cs">
+    <Compile Include="Product\select_mode.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="select_mode.Designer.cs">
+    <Compile Include="Product\select_mode.Designer.cs">
       <DependentUpon>select_mode.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="add_product.resx">
+    <EmbeddedResource Include="Product\add_product.resx">
       <DependentUpon>add_product.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="edit_material.resx">
+    <EmbeddedResource Include="Product\edit_material.resx">
       <DependentUpon>edit_material.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="edit_material_product.resx">
-      <DependentUpon>edit_material_product.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="edit_product.resx">
+    <EmbeddedResource Include="Product\edit_product.resx">
       <DependentUpon>edit_product.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Product\select_product.resx">
       <DependentUpon>select_product.cs</DependentUpon>
@@ -138,7 +120,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="select_mode.resx">
+    <EmbeddedResource Include="Product\select_mode.resx">
       <DependentUpon>select_mode.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
