--- a/app/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/app/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D444C1BF-B094-45E7-9D3C-B0EEF1F744FF}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>WindowsFormsApp1</RootNamespace>
     <AssemblyName>WindowsFormsApp1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -66,6 +66,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Agent.cs" />
+    <Compile Include="Agent\add_agent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Agent\add_agent.Designer.cs">
+      <DependentUpon>add_agent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Agent\edit_agent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Agent\edit_agent.Designer.cs">
+      <DependentUpon>edit_agent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Agent\select_agents.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +130,12 @@
     <Compile Include="Product\select_mode_product.Designer.cs">
       <DependentUpon>select_mode_product.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Agent\add_agent.resx">
+      <DependentUpon>add_agent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Agent\edit_agent.resx">
+      <DependentUpon>edit_agent.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Agent\select_agents.resx">
       <DependentUpon>select_agents.cs</DependentUpon>
     </EmbeddedResource>
